# dreamerv3

./: .coveragerc  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CLAUDE.md  COVERAGE.md  Dockerfile  README.md  codecov.yml  plot.py  pyproject.toml  requirements.txt  sitecustomize.py  tests_with_subprocess_coverage.sh
.github/workflows/: codeql.yml  docker-test.yml  static-analysis.yml  test-coverage.yml
dreamerv3/: agent.py  main.py  rssm.py
dreamerv3/tests/: __init__.py  conftest.py  test_agent.py  test_main.py  test_rssm.py
embodied/: __init__.py
embodied/core/: chunk.py  clock.py  driver.py  limiters.py  random.py  replay.py  selectors.py  streams.py  wrappers.py
embodied/envs/: atari.py  bsuite.py  crafter.py  dmc.py  dmlab.py  dummy.py  from_dm.py  from_gym.py  loconav.py  loconav_quadruped.py  minecraft_flat.py  pinpad.py  procgen.py
embodied/jax/: agent.py  heads.py  internal.py  nets.py  opt.py  outs.py  transform.py  utils.py
embodied/perf/: test_bandwidth.py  test_distr.py  test_driver.py  test_replay.py
embodied/run/: eval_only.py  parallel.py  train.py  train_eval.py
embodied/tests/: conftest.py  test_agent_additional.py  test_agent_integration.py  test_base.py  test_chunk.py  test_clock.py  test_dreamerv3_agent.py  test_dreamerv3_main.py  test_dreamerv3_rssm.py  test_driver.py  test_eval_only.py  test_eval_only_e2e.py  test_heads_integration.py  test_init.py  test_internal_additional.py  test_jax_agent.py  test_jax_heads.py  test_jax_internal.py  test_jax_nets.py  test_jax_opt.py  test_jax_outs.py  test_jax_transform.py  test_jax_utils.py  test_layer_scan.py  test_limiters.py  test_nets_integration.py  test_opt_integration.py  test_parallel.py  test_random.py  test_replay.py  test_sampletree.py  test_selectors.py  test_streams.py  test_train.py  test_train_e2e.py  test_train_eval.py  test_train_eval_e2e.py  test_transform_additional.py  test_utils_integration.py  test_wrappers.py  (+1 more)
